--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,12 +5,16 @@ nodaemon=true
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/nginx/error.log
-stdout_logfile=/var/log/nginx/access.log
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
 
 [program:php-fpm]
 command=php-fpm
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/php-fpm/error.log
-stdout_logfile=/var/log/php-fpm/access.log
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
