--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,20 +1,19 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:nginx]
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
+user=root
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
-stdout_logfile_maxbytes=0
 
 [program:php-fpm]
 command=php-fpm
 autostart=true
 autorestart=true
+user=root
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
-stdout_logfile_maxbytes=0
